# ifc_explorer

./: CMakeLists.txt  conanfile.py
scripts/bash/: cmake_setup.sh
src/: IFC4X3_RC2.hxx  IfcConstants.h  IfcFileDeserializer.h  main.cpp
